--- a/css/comment.css
+++ b/css/comment.css
@@ -284,7 +284,8 @@
           min-height: 54px;
           box-sizing: border-box; }
           .comment_block .individuals_block_slide_content .text_block .all_read {
-            font: 10px/20px 'Georgia-BoldItalic';
+            font: 10px/20px Georgia;
+            font-weight: bold;
             font-style: italic;
             position: absolute;
             right: 20px;
@@ -478,8 +479,8 @@
                 color: #b80000;
                 font-weight: bold; }
           .comment_block .entity_wrap_slider_slide .text_block .all_read {
-            font: 10px/20px 'Georgia-BoldItalic';
-            font-style: normal;
+            font: 10px/20px Georgia;
+            font-weight: bold;
             font-style: italic;
             position: absolute;
             right: 20px;
