--- a/css/footer.css
+++ b/css/footer.css
@@ -164,7 +164,8 @@
           margin-top: 5px; }
         .footer_info__section_parcing_text {
           width: 100%;
-          font: 12px/17px 'Georgia-Italic';
+          font: 12px/17px Georgia;
+          font-style: italic;
           color: #7b7b7b;
           margin-top: 5px;
           letter-spacing: 0.6px; }
