--- a/sass/mini_footer.scss
+++ b/sass/mini_footer.scss
@@ -255,7 +255,9 @@
       }
       span{
         display: block;
-        font: 11px/16px 'Georgia-BoldItalic';
+        font: 11px/16px Georgia;
+        font-style: italic;
+        font-weight: bold;
         color: #646464;
         margin-bottom: 8.5px;
       }
@@ -263,7 +265,9 @@
     &_price{
       float: left;
       width: 100%;
-      font: 15px/20px 'Georgia-BoldItalic';
+      font: 15px/20px Georgia;
+      font-style: italic;
+      font-weight: bold;
       color: #646464;
       margin: 30px 0px;
       text-decoration: underline;
@@ -496,7 +500,9 @@
         }
         span{
           float: left;
-          font: 13px/21px 'Georgia-BoldItalic';
+          font: 13px/21px Georgia;
+          font-style: italic;
+          font-weight: bold;
           color: #662211;
           margin-left: 5px;
           background: #f2f2f1;
