--- a/sass/schem.scss
+++ b/sass/schem.scss
@@ -208,7 +208,7 @@
   .bg-Vimtex {
     display: inline-block;
     width: 700px; height: 447px;
-    background: url('../img/sprite_footer.png') -0 -1149px;
+    background: url('../img/sprite_footer.png') -1150px -636px;
   }
 }
 .map_block {
