--- a/css/schem.css
+++ b/css/schem.css
@@ -179,7 +179,7 @@
   display: inline-block;
   width: 700px;
   height: 447px;
-  background: url("../img/sprite_footer.png") 0 -1149px; }
+  background: url("../img/sprite_footer.png") -1150px -636px; }
 
 .map_block {
   width: 700px;
