--- a/sass/black_panel.scss
+++ b/sass/black_panel.scss
@@ -248,7 +248,9 @@
     &_zag {
       float: left;
       width: 100%;
-      font: 18px/49px 'Georgia-BoldItalic';
+      font: 18px/49px Georgia;
+      font-style: italic;
+      font-weight: bold;
       color: #ff0000;
       text-decoration: underline;
       background: #FFFFFF;
@@ -335,7 +337,9 @@
           }
         }
         p {
-          font: 14px/36px 'Georgia-BoldItalic';
+          font: 14px/36px Georgia;
+          font-weight: bold;
+          font-style: italic;
           color: #afafaf;
           display: inline-block;
         }
