--- a/sass/price.scss
+++ b/sass/price.scss
@@ -229,7 +229,9 @@
                   color: #662211;
                   margin-top: 3px;
                   span {
-                    font: 12px/16px 'Georgia-BoldItalic';
+                    font: 12px/16px Georgia;
+                    font-style: italic;
+                    font-weight: bold;
                   }
                 }
               }
@@ -297,7 +299,9 @@
                   font: 19px/16px 'robotoBlack';
                   color: #b41600;
                   span {
-                    font: 13px/16px 'Georgia-BoldItalic';
+                    font: 13px/16px Georgia;
+                    font-style: italic;
+                    font-weight: bold;
                     color: #662211;
                   }
                 }
@@ -539,7 +543,9 @@
                   }
                   .guarantee {
                     float: left;
-                    font: 16px/27px 'Georgia-BoldItalic';
+                    font: 16px/27px Georgia;
+                    font-style: italic;
+                    font-weight: bold;
                     color: #662211;
                     span {
                       font-size: 13px;
@@ -689,7 +695,9 @@
           }
           p {
             float: left;
-            font: 12px/16px 'Georgia-Italic';
+            font: 12px/16px Georgia;
+            font-style: italic;
+
             color: #d80000;
             margin-top: 9px;
             margin-left: 11px;
@@ -826,7 +834,9 @@
               bottom: 15px;
               letter-spacing: -0.8px;
               i {
-                font-family: 'Georgia-BoldItalic';
+                font-family: Georgia;
+                font-style: italic;
+                font-weight: bold;
               }
             }
 
@@ -1044,7 +1054,9 @@
             color: #a20303;
             font-weight: bold;
             i {
-              font-family: 'Georgia-BoldItalic';
+              font-family: Georgia;
+              font-style: italic;
+              font-weight: bold;
               color: #670101;
               text-transform: none;
             }
@@ -1282,7 +1294,8 @@
             }
             h4 {
               width: 100%;
-              font: 20px/20px 'Georgia-Bold';
+              font: 20px/20px Georgia;
+              font-weight: bold;
               color: #82000c;
               margin-top: 20px;
               margin-bottom: 10px;
